--- a/functions/package.json
+++ b/functions/package.json
@@ -13,9 +13,8 @@
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1",
-	"bcrypt-nodejs": "0.0.3",
+    "agora-token": "^2.0.3",
+    "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
@@ -23,6 +22,8 @@
     "ejs": "^3.1.9",
     "express": "^4.16.2",
     "express-validation": "^1.0.2",
+    "firebase-admin": "^11.8.0",
+    "firebase-functions": "^4.3.1",
     "helmet": "^3.21.1",
     "http-status": "^1.0.1",
     "joi": "^13.1.2",
@@ -37,8 +38,7 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "firebase-functions-test": "^3.1.0",
-	"chai": "^4.1.2",
+    "chai": "^4.1.2",
     "chai-http": "^4.3.0",
     "cross-env": "^5.1.3",
     "eslint": "^4.17.0",
@@ -47,6 +47,7 @@
     "eslint-plugin-node": "^6.0.0",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
+    "firebase-functions-test": "^3.1.0",
     "mocha": "^7.2.0",
     "nodemon": "^2.0.4"
   },
