--- a/functions/.env
+++ b/functions/.env
@@ -1,7 +1,7 @@
 # App Info
-NODE_ENV=dev
+NODE_ENV=prod
 APP="Vision Calling"
-HOSTNAME=http://localhost:3000
+HOSTNAME=https://vision-calling.web.app
 APP_SECRET=sRitmTDm25
 
 # Mongo URI
