#153414a897ee2c0e7ec19ba653e1228bdcd2a27a

--- a/functions/.env
+++ b/functions/.env
@@ -1,7 +1,7 @@
 # App Info
 NODE_ENV=prod
 APP="Vision Calling"
-HOSTNAME=https://vision-calling.web.app
+HOSTNAME=https://vision-calling-backend.web.app
 APP_SECRET=sRitmTDm25
 
 # Mongo URI
